# public/swagger.json
@@ -27,24 +27,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Options": {
-				"properties": {
-					"page": {
-						"type": "number",
-						"format": "double"
-					},
-					"limit": {
-						"type": "number",
-						"format": "double"
-					}
-				},
-				"required": [
-					"page",
-					"limit"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"RequestBodys": {
 				"properties": {
 					"name": {
@@ -69,7 +51,7 @@
 		"contact": {}
 	},
 	"paths": {
-		"/user": {
+		"/user/register": {
 			"post": {
 				"operationId": "CreateUser",
 				"responses": {
@@ -82,9 +64,6 @@
 						}
 					}
 				},
-				"tags": [
-					"User"
-				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -97,9 +76,11 @@
 						}
 					}
 				}
-			},
+			}
+		},
+		"/user/verify": {
 			"get": {
-				"operationId": "GetAll",
+				"operationId": "VerifyEmail",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -110,118 +91,51 @@
 						}
 					}
 				},
-				"tags": [
-					"User"
-				],
 				"security": [],
 				"parameters": [
 					{
 						"in": "query",
-						"name": "page",
+						"name": "token",
 						"required": true,
 						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					},
-					{
-						"in": "query",
-						"name": "limit",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
+							"type": "string"
 						}
 					}
 				]
 			}
 		},
-		"/user/{userId}": {
-			"get": {
-				"operationId": "GetById",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
-					}
-				},
-				"tags": [
-					"User"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "userId",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			},
-			"put": {
-				"operationId": "UpdateUser",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
-					}
-				},
-				"tags": [
-					"User"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "userId",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/RequestBody"
-							}
-						}
-					}
-				}
-			},
-			"delete": {
-				"operationId": "DeleteById",
+		"/user/login": {
+			"post": {
+				"operationId": "Login",
 				"responses": {
 					"204": {
 						"description": "No content"
 					}
 				},
-				"tags": [
-					"User"
-				],
 				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "userId",
-						"required": true,
-						"schema": {
-							"type": "string"
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"email": {
+										"type": "string"
+									},
+									"password": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"email",
+									"password"
+								],
+								"type": "object"
+							}
 						}
 					}
-				]
+				}
 			}
 		},
 		"/movie": {
